--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS Data Manipulation</title>
-    <script src="count-items.js"></script>
+    <script src="group-by-first-letter.js"></script>
   </head>
   <body style="background-color: #333"></body>
 </html>
